[gd_scene load_steps=3 format=3 uid="uid://viu5y628ekk0"]

[ext_resource type="Script" path="res://src/ui/screens/world/JobSelectionUI.gd" id="1"]
[ext_resource type="Theme" path="res://src/ui/themes/default_theme.tres" id="2"]

[node name="JobSelectionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Available Jobs"
horizontal_alignment = 1

[node name="JobTypes" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="PatronJobs" type="Button" parent="MainContainer/JobTypes"]
layout_mode = 2
text = "Patron Jobs"
toggle_mode = true
button_pressed = true

[node name="OpportunityJobs" type="Button" parent="MainContainer/JobTypes"]
layout_mode = 2
text = "Opportunity Jobs"
toggle_mode = true

[node name="QuestJobs" type="Button" parent="MainContainer/JobTypes"]
layout_mode = 2
text = "Quest Jobs"
toggle_mode = true

[node name="JobList" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="JobContainer" type="VBoxContainer" parent="MainContainer/JobList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JobControls" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="GenerateJobs" type="Button" parent="MainContainer/JobControls"]
layout_mode = 2
text = "Generate New Jobs"

[node name="JobStatus" type="Label" parent="MainContainer/JobControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select a job to continue"
horizontal_alignment = 1

[node name="AcceptJob" type="Button" parent="MainContainer/JobControls"]
layout_mode = 2
text = "Accept Selected Job"
disabled = true 